versioned_docs/version-1.0.0/guides/providers/email/mandrill.mdx
---
sidebar_position: 5
---

# Mandrill

## Profile Requirements

To deliver a message to a recipient over Mandrill, Courier must be provided the recipient's email address. This value should be included in the recipient profile as `email`.

```json title=JSON
// Recipient Profile
{
  "email": "example@example.com"
}
```

## Override

You can use a provider override to replace what we send to Mandrill's Messages API. For example, you can add an attachment to your request:

```json title=JSON
{
  "event": "ABCDEFGHIJKLMNOPQRSTUVWXYZ",
  "recipient": "abc123",
  "profile": {
    "email": "example@example.com"
  },
  "override": {
    "mandrill": {
      "body": {
        "message": {
          "attachments": [
            {
              "type": "text/plain",
              "name": "myfile.txt",
              "content": "ZXhhbXBsZSBmaWxl"
            }
          ]
        }
      }
    }
  }
}
```

Everything inside of `override.mandrill` will replace what we send to Mandrill's Messages API. You can see all the available options by visiting [Mandrill API docs](https://mandrillapp.com/api/docs/messages.JSON.html).
